# docs/openapi.yaml
@@ -18,34 +18,34 @@ servers:
 paths:
   /contacts:
     get:
-      $ref: ../swagger/paths/contacts/get.yaml
+      $ref: '../swagger/paths/contacts/get.yaml'
     post:
-      $ref: ../swagger/paths/contacts/post.yaml
+      $ref: '../swagger/paths/contacts/post.yaml'
   /contacts/{contactId}:
     get:
-      $ref: ../swagger/paths/contacts/{contactId}/get.yaml
+      $ref: '../swagger/paths/contacts/{contactId}/get.yaml'
     patch:
-      $ref: ../swagger/paths/contacts/{contactId}/patch.yaml
+      $ref: '../swagger/paths/contacts/{contactId}/patch.yaml'
     delete:
-      $ref: ../swagger/paths/contacts/{contactId}/delete.yaml
+      $ref: '../swagger/paths/contacts/{contactId}/delete.yaml'
   /auth/register:
     post:
-      $ref: ../swagger/paths/auth/register/post.yaml
+      $ref: '../swagger/paths/auth/register/post.yaml'
   /auth/login:
     post:
-      $ref: ../swagger/paths/auth/login/post.yaml
+      $ref: '../swagger/paths/auth/login/post.yaml'
   /auth/refresh:
     post:
-      $ref: ../swagger/paths/auth/refresh/post.yaml
+      $ref: '../swagger/paths/auth/refresh/post.yaml'
   /auth/send-reset-email:
     post:
-      $ref: ../swagger/paths/auth/send-reset-email/post.yaml
+      $ref: '../swagger/paths/auth/send-reset-email/post.yaml'
   /auth/reset-pwd:
     post:
-      $ref: ../swagger/paths/auth/reset-pwd/post.yaml
+      $ref: '../swagger/paths/auth/reset-pwd/post.yaml'
   /auth/logout:
     post:
-      $ref: ../swagger/paths/auth/logout/post.yaml
+      $ref: '../swagger/paths/auth/logout/post.yaml'
 components:
   securitySchemes:
     bearerAuth:
@@ -75,5 +75,3 @@ components:
       $ref: '../swagger/components/responses/contacts/404.yaml'
     409:
       $ref: '../swagger/components/responses/auth/409.yaml'
-    404-2:
-      $ref: '../swagger/components/responses/auth/404.yaml'
